@@ -17,11 +17,13 @@
 */
 package org.apache.hadoop.yarn.server.nodemanager.api;
 
+import java.io.IOException;
+
 import org.apache.hadoop.yarn.exceptions.YarnRemoteException;
 import org.apache.hadoop.yarn.server.nodemanager.api.protocolrecords.LocalizerHeartbeatResponse;
 import org.apache.hadoop.yarn.server.nodemanager.api.protocolrecords.LocalizerStatus;
 
 public interface LocalizationProtocol {
   public LocalizerHeartbeatResponse heartbeat(LocalizerStatus status)
-      throws YarnRemoteException;
+      throws YarnRemoteException, IOException;
 }
